@@ -8,6 +8,7 @@
     <artifactId>SauceDemoQA</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <properties>
         <aspectj.version>1.9.20.1</aspectj.version>
         <allure.version>2.24.0</allure.version>
@@ -15,6 +16,9 @@
         <maven.compiler.target>17</maven.compiler.target>
         <testng.version>7.10.2</testng.version>
         <selenium.version>4.34.0</selenium.version>
+        <assertj.version>3.27.4</assertj.version>
+        <javafaker.version>1.0.2</javafaker.version>
+        <lombok.version>1.18.38</lombok.version>
         <suiteXmlFile>src/test/resources/CrossBrowserTest.xml</suiteXmlFile>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <retry.count>5</retry.count>
@@ -52,7 +56,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.27.4</version>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -69,27 +73,63 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${javafaker.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.9</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.24.2</version>
+        </dependency>
+
+        <!--Вычитывание информации в файле логов yaml  https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.12.3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>    <version>3.0.0-M4</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
                 <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>        </suiteXmlFiles>
                     <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
-                    <!-- Добавляем системные свойства для Retry -->
                     <systemProperties>
                         <property>
                             <name>retry.count</name>
                             <value>${retry.count}</value>
                         </property>
                     </systemProperties>
-                </configuration> </plugin>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
@@ -120,4 +160,5 @@
             </properties>
         </profile>
     </profiles>
+
 </project>
